--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "import/extensions": [1, "never"],
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "max-len": ["error", { "code": 150 }]
     }
 }
