--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
   },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint && npm run test"
