--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ReactJS start project with webpack, babel, sass, minify and many other goodies",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.js",
+    "start": "npm run build:prod && node server.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --config webpack.config.js",
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "lint:fix": "eslint --ext .js --ext .jsx . --fix",
