--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "express": "^4.17.1"
   },
   "jest": {
     "snapshotSerializers": [
