--- a/package.json
+++ b/package.json
@@ -76,8 +76,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "express": "^4.17.1",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -86,10 +90,7 @@
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "express": "^4.17.1",
-    "ejs": "^3.0.1",
-    "body-parser": "^1.19.0"
+    "redux-saga": "^1.1.3"
   },
   "jest": {
     "snapshotSerializers": [
