--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "redux-mock-store": "^1.5.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
