--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "import/extensions": [1, "never"],
         "import/no-unresolved": "off",
-        "max-len": ["error", { "code": 150 }]
+        "max-len": ["error", { "code": 150 }],
+        "react/jsx-props-no-spreading": "off",
+        "react/prop-types": "off"
     }
 }
