--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "react-router-dom": "^5.1.2"
   },
   "jest": {
     "snapshotSerializers": [
