--- a/package.json
+++ b/package.json
@@ -42,22 +42,22 @@
   },
   "homepage": "https://github.com/diogoferraz/react-starter#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.7",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
@@ -66,34 +66,34 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
-    "redux-devtools": "^3.5.0",
+    "redux-devtools": "^3.7.0",
     "redux-mock-store": "^1.5.4",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.2",
-    "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.3.0",
+    "svg-inline-loader": "^0.8.2",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "ejs": "^3.0.1",
+    "ejs": "^3.1.5",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.5",
     "express": "^4.17.1",
-    "jest": "^24.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.1.3",
-    "react-test-renderer": "^16.12.0",
+    "jest": "^26.6.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3",
-    "react-router-dom": "^5.1.2"
+    "redux-saga": "^1.1.3"
   },
   "jest": {
     "snapshotSerializers": [
